bug fix : attribute containers compress too much on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -93,9 +93,10 @@ h3 {
   color: darkred;
 }
 
-h4 {
+.attribute-name {
   font-size: 1.2rem;
   font-weight: 600;
+  margin: 0.5rem 0;
 }
 
 /* attributes */
@@ -111,13 +112,18 @@ h4 {
   background-color: darkred;
   color: whitesmoke;
   width: 10%;
-  max-width: 10rem;
+  max-width: 7rem;
+  min-width: 5rem;
   border-radius: 0.5rem;
 }
 
 .attribute .value {
   font-size: 2rem;
   font-weight: 900;
+}
+
+.attribute .modifier {
+  margin-bottom: 1rem;
 }
 
 /* footer */
